<resources>
    <string name="app_name">Cinema Webservice</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="films">Movies</string>
    <string name="actors">Actors</string>
    <string name="categories">Categories</string>
    <string name="characters">Characters</string>
    <string name="directors">Directors</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="edit">Edit</string>
    <string name="budget">Budget</string>
    <string name="grossing">Grossing</string>
    <string name="releaseDate">Release Date</string>
    <string name="duration">Duration</string>
    <string name="director">Director</string>
    <string name="lastName">Surname</string>
    <string name="firstName">First Name</string>
    <string name="category">Category</string>
    <string name="title">Title</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="birthday">Birthday</string>
    <string name="deathdate">Death Date</string>
</resources>
