<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_film"
                android:icon="@drawable/ic_film"
                android:title="@string/films"/>
        <item
                android:id="@+id/nav_actor"
                android:icon="@drawable/ic_actor"
                android:title="@string/actors"/>
        <item
                android:id="@+id/nav_character"
                android:icon="@drawable/ic_character"
                android:title="@string/characters"/>
        <item
                android:id="@+id/nav_category"
                android:icon="@drawable/ic_category"
                android:title="@string/categories"/>
        <item
                android:id="@+id/nav_director"
                android:icon="@drawable/ic_director"
                android:title="@string/directors"/>
    </group>
</menu>
