<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="cinema.webservice.polytech.fr.cinemawebservice.ui.FilmFragment">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


            <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_title_label" android:layout_marginTop="16dp"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
                    android:layout_marginLeft="16dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginStart="24dp" android:text="@string/title"
                    android:textColor="@color/colorAccent"/>

            <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_budget_label" android:layout_marginTop="22dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title_label"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
                    android:layout_marginLeft="16dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginStart="24dp" android:text="@string/budget"
                    android:textColor="@color/colorAccent"/>
            <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_grossing_label"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
                    android:layout_marginLeft="16dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginStart="24dp" android:layout_marginTop="21dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_budget_label" android:text="@string/grossing"
                    android:textColor="@color/colorAccent"/>
            <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_release_date_label" android:layout_marginTop="22dp"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
                    android:layout_marginLeft="16dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_grossing_label"
                    android:layout_marginStart="24dp" android:text="@string/releaseDate"
                    android:textColor="@color/colorAccent"/>

            <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_duration_label"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
                    android:layout_marginLeft="16dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginStart="24dp" android:text="@string/duration"
                    android:layout_marginTop="30dp" app:layout_constraintTop_toBottomOf="@+id/datePicker"
                    android:textColor="@color/colorAccent"/>

            <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_director_label" android:layout_marginTop="18dp"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
                    android:layout_marginLeft="24dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_duration_label"
                    android:layout_marginStart="24dp" android:text="@string/director"
                    android:textColor="@color/colorAccent"/>

            <TextView
                    android:layout_width="120dp"
                    android:layout_height="0dp"
                    android:id="@+id/tv_category_label" android:layout_marginTop="22dp"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
                    android:layout_marginLeft="16dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_director_label"
                    android:layout_marginStart="24dp" android:text="@string/category"
                    android:textColor="@color/colorAccent"/>


            <EditText
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_title"
                    android:textAppearance="@android:style/TextAppearance.Material.Large"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tv_title_label"
                    app:layout_constraintLeft_toRightOf="@+id/tv_title_label" android:layout_marginLeft="16dp"
                    android:layout_marginRight="24dp" app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintHorizontal_bias="1.0" android:layout_marginStart="16dp"
                    android:layout_marginEnd="24dp" android:layout_width="0dp"
                    android:contentDescription="@string/title" android:textColor="@android:color/background_light"/>

            <EditText
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/tv_budget"
                    android:textAppearance="@android:style/TextAppearance.Material.Large"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tv_budget_label"
                    app:layout_constraintLeft_toRightOf="@+id/tv_budget_label" android:layout_marginLeft="16dp"
                    android:layout_marginRight="24dp" app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintHorizontal_bias="1.0" android:layout_marginStart="16dp"
                    android:layout_marginEnd="24dp" android:layout_width="0dp"
                    android:textColor="@android:color/background_light"/>
            <EditText
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/tv_grossing"
                    android:textAppearance="@android:style/TextAppearance.Material.Large"
                    app:layout_constraintLeft_toRightOf="@+id/tv_grossing_label" android:layout_marginLeft="16dp"
                    android:layout_marginRight="24dp" app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintHorizontal_bias="1.0" android:layout_marginStart="16dp"
                    android:layout_marginEnd="24dp" android:layout_width="0dp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tv_grossing_label"
                    android:textColor="@android:color/background_light"/>
            <EditText
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/tv_duration"
                    android:textAppearance="@android:style/TextAppearance.Material.Large"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tv_duration_label"
                    app:layout_constraintLeft_toRightOf="@+id/tv_duration_label" android:layout_marginLeft="16dp"
                    android:layout_marginRight="24dp" app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintHorizontal_bias="0.0" android:layout_marginStart="16dp"
                    android:layout_marginEnd="24dp" android:layout_width="0dp"
                    android:textColor="@android:color/background_light"/>
            <DatePicker
                    android:layout_height="wrap_content"
                    android:id="@+id/datePicker"
                    android:layout_marginLeft="8dp" android:layout_marginRight="8dp"
                    app:layout_constraintRight_toRightOf="parent" app:layout_constraintHorizontal_bias="0.489"
                    app:layout_constraintLeft_toLeftOf="parent" android:layout_width="wrap_content"
                    android:layout_marginTop="15dp" app:layout_constraintTop_toBottomOf="@+id/tv_release_date_label"
                    android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
            <Spinner
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner_category"
                    android:layout_marginRight="8dp"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp" app:layout_constraintTop_toTopOf="@+id/tv_category_label"
                    android:layout_marginTop="0dp" app:layout_constraintBottom_toBottomOf="@+id/tv_category_label"
                    android:layout_marginBottom="0dp" app:layout_constraintLeft_toRightOf="@+id/tv_category_label"
                    android:layout_marginLeft="8dp" app:layout_constraintHorizontal_bias="0.506"
                    android:background="@color/colorBackground" android:popupBackground="@color/colorBackground"/>
            <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner_director"
                    app:layout_constraintTop_toTopOf="@+id/tv_director_label" android:layout_marginTop="6dp"
                    android:layout_marginRight="8dp" app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_director_label" android:layout_marginBottom="8dp"
                    app:layout_constraintLeft_toRightOf="@+id/tv_director_label" android:layout_marginLeft="8dp"
                    android:background="@color/colorBackground" android:popupBackground="@color/colorBackground"/>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</FrameLayout>
