<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="cinema.webservice.polytech.fr.cinemawebservice.ui.FilmFragment">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:text="TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_film_title"
                android:textAppearance="@android:style/TextAppearance.Material.Display1"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="24dp"
                android:layout_marginRight="16dp" app:layout_constraintRight_toRightOf="parent"
                android:layout_marginLeft="16dp" app:layout_constraintLeft_toLeftOf="parent"
                android:textAlignment="center" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
                android:textColor="@android:color/holo_blue_bright"/>
        <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_budget_label" android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_film_title"
                android:textAppearance="@android:style/TextAppearance.Material.Medium" android:layout_marginLeft="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="24dp" android:text="@string/budget" android:textColor="@color/colorAccent"/>
        <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_grossing_label"
                android:textAppearance="@android:style/TextAppearance.Material.Medium" android:layout_marginLeft="24dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="24dp" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_budget_label" android:text="@string/grossing"
                android:textColor="@color/colorAccent"/>
        <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_release_date_label" android:layout_marginTop="20dp"
                android:textAppearance="@android:style/TextAppearance.Material.Medium" android:layout_marginLeft="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_grossing_label"
                android:layout_marginStart="24dp" android:text="@string/releaseDate"
                android:textColor="@color/colorAccent"/>

        <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_duration_label" android:layout_marginTop="20dp"
                android:textAppearance="@android:style/TextAppearance.Material.Medium" android:layout_marginLeft="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_release_date_label"
                android:layout_marginStart="24dp" android:text="@string/duration"
                android:textColor="@color/colorAccent"/>

        <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_director_label" android:layout_marginTop="20dp"
                android:textAppearance="@android:style/TextAppearance.Material.Medium" android:layout_marginLeft="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_duration_label"
                android:layout_marginStart="24dp" android:text="@string/director"
                android:textColor="@color/colorAccent"/>

        <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_category_label" android:layout_marginTop="20dp"
                android:textAppearance="@android:style/TextAppearance.Material.Medium" android:layout_marginLeft="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_director_label"
                android:layout_marginStart="24dp" android:text="@string/category"
                android:textColor="@color/colorAccent"/>
        <TextView
                android:text="TextView"
                android:layout_height="wrap_content"
                android:id="@+id/tv_budget"
                android:textAppearance="@android:style/TextAppearance.Material.Large"
                app:layout_constraintBaseline_toBaselineOf="@+id/tv_budget_label"
                app:layout_constraintLeft_toRightOf="@+id/tv_budget_label" android:layout_marginLeft="8dp"
                android:layout_marginRight="24dp" app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.0" android:layout_marginStart="16dp"
                android:layout_marginEnd="24dp" android:layout_width="0dp"
                android:textColor="@android:color/background_light"/>
        <TextView
                android:text="TextView"
                android:layout_height="wrap_content"
                android:id="@+id/tv_release_date"
                android:textAppearance="@android:style/TextAppearance.Material.Large"
                app:layout_constraintBaseline_toBaselineOf="@+id/tv_release_date_label"
                app:layout_constraintLeft_toRightOf="@+id/tv_release_date_label" android:layout_marginLeft="8dp"
                android:layout_marginRight="24dp" app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.0" android:layout_marginStart="16dp"
                android:layout_marginEnd="24dp" android:layout_width="0dp"
                android:textColor="@android:color/background_light"/>
        <TextView
                android:text="TextView"
                android:layout_height="wrap_content"
                android:id="@+id/tv_grossing"
                android:textAppearance="@android:style/TextAppearance.Material.Large"
                app:layout_constraintBaseline_toBaselineOf="@+id/tv_grossing_label"
                app:layout_constraintLeft_toRightOf="@+id/tv_grossing_label" android:layout_marginLeft="8dp"
                android:layout_marginRight="24dp" app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.0" android:layout_marginStart="16dp"
                android:layout_marginEnd="24dp" android:layout_width="0dp"
                android:textColor="@android:color/background_light"/>
        <TextView
                android:text="TextView"
                android:layout_height="wrap_content"
                android:id="@+id/tv_duration"
                android:textAppearance="@android:style/TextAppearance.Material.Large"
                app:layout_constraintBaseline_toBaselineOf="@+id/tv_duration_label"
                app:layout_constraintLeft_toRightOf="@+id/tv_duration_label" android:layout_marginLeft="8dp"
                android:layout_marginRight="24dp" app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.0" android:layout_marginStart="16dp"
                android:layout_marginEnd="24dp" android:layout_width="0dp"
                android:textColor="@android:color/background_light"/>
        <TextView
                android:text="TextView"
                android:layout_height="wrap_content"
                android:id="@+id/tv_director"
                android:textAppearance="@android:style/TextAppearance.Material.Large"
                app:layout_constraintBaseline_toBaselineOf="@+id/tv_director_label"
                app:layout_constraintLeft_toRightOf="@+id/tv_director_label" android:layout_marginLeft="8dp"
                android:layout_marginRight="24dp" app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.0" android:layout_marginStart="16dp"
                android:layout_marginEnd="24dp" android:layout_width="0dp"
                android:textColor="@android:color/background_light"/>
        <TextView
                android:text="TextView"
                android:layout_height="wrap_content"
                android:id="@+id/tv_category"
                android:textAppearance="@android:style/TextAppearance.Material.Large"
                app:layout_constraintBaseline_toBaselineOf="@+id/tv_category_label"
                app:layout_constraintLeft_toRightOf="@+id/tv_category_label" android:layout_marginLeft="8dp"
                android:layout_marginRight="24dp" app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.0" android:layout_marginStart="16dp"
                android:layout_marginEnd="24dp" android:layout_width="0dp"
                android:textColor="@android:color/background_light"/>

    </android.support.constraint.ConstraintLayout>

</FrameLayout>
